manifests_prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-01
spec:
  selector:
    matchLabels:
      app: kd
  template:
    metadata:
      labels:
        app: kd
    spec:
      containers:
        - name: golang-app
          image: abereziuk/task-01:1.1.2 # {"$imagepolicy": "flux-system:image-policy"}
          ports:
            - containerPort: 8080
